tests/invalid/boolean_operators/missing_semicolon.rs
/*
compilationExitCode: 2
*/

main(): i32 {
    return 1 || 2
}